[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Unverified HTTPS request"
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py36, py37, py38, py39

[testenv]
deps = 
    pytest
    -rrequirements.txt
commands = 
    pytest test/test_pebble.py
"""