[metadata]
name = pyacme
version = attr: pyacme.__version__
description = A simple acme client written in python
keywords = ACME, certificate, letsencrypt
classifiers = 
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Operating System :: POSIX :: Linux
    Environment :: Console

[options]
packages = find:
install_requires = 
    requests
    cryptography >= 3.2.1
    aliyun-python-sdk-core
    aliyun-python-sdk-alidns
python_requires = >=3.8

[options.packages.find]
exclude = 
    test

[options.entry_points]
console_scripts = 
    pyacme = pyacme:main_entry_point